--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,21 +3,31 @@
     package="com.example.hunter_game">
     <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Alon Ronder"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hunter_Game">
+        <activity
+            android:name=".activities.MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
+
+        </activity>
         <activity
             android:name=".activities.GameActivity"
             android:exported="true"
             android:screenOrientation="portrait">
         </activity>
+
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.TopTenActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -27,5 +37,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
